# DFMY-Raytracer

./: .gitignore  .pre-commit-config.yaml  AObject_8hpp_source.html  App_8hpp_source.html  CMakeLists.txt  CameraPanel_8hpp_source.html  CameraProperties_8hpp_source.html  Camera_8hpp_source.html  Color_8hpp_source.html  Compute_8hpp_source.html  ConfigException_8hpp_source.html  ConfigUtils_8hpp_source.html  ConfigValidator_8hpp_source.html  Config_8hpp_source.html  CubeProvider_8hpp_source.html  Cube_8hpp_source.html  DLLoader_8hpp_source.html  Dockerfile  Doxyfile  Float_8hpp_source.html  Form_8hpp_source.html  GuiContext_8hpp_source.html  HitInfo_8hpp_source.html  IFace_8hpp_source.html  IHandler_8hpp_source.html  IObjectProvider_8hpp_source.html  IObject_8hpp_source.html  Image_8hpp_source.html  Jenkinsfile  LeftPanel_8hpp_source.html  Libraries_8hpp_source.html  MainPanel_8hpp_source.html  Makefile  Manifest_8hpp_source.html  Material_8hpp_source.html  MenuBar_8hpp_source.html  MeshProvider_8hpp_source.html  Mesh_8hpp_source.html  ObjectFactory_8hpp_source.html  ObjectProperties_8hpp_source.html  (+560 more)
.github/: pull_request_template.md
build_plugins/: CMakeCache.txt  Makefile  cmake_install.cmake
common/: CMakeLists.txt
common/abstracts/: AObject.cpp  AObject.hpp  CMakeLists.txt
common/config/: CMakeLists.txt  ConfigUtils.cpp  ConfigUtils.hpp
common/interfaces/: CMakeLists.txt  IObject.hpp  IObjectProvider.hpp
common/interfaces/graphics/: IObject.hpp
common/types/: CMakeLists.txt  Libraries.hpp
common/types/graphics/: Color.cpp  Color.hpp  Material.cpp  Material.hpp  Pixel.hpp
common/types/math/: Float.cpp  Float.hpp  HitInfo.hpp  Point.cpp  Point.hpp  Ray.cpp  Ray.hpp  Size.hpp  Vector.cpp  Vector.hpp
common/types/object/: Manifest.cpp  Manifest.hpp  Provider.hpp
core/: CMakeLists.txt  main.cpp
core/app/: App.cpp  App.hpp  CMakeLists.txt  IHandler.hpp
core/app/cli/: CMakeLists.txt  Handler.cpp  Handler.hpp
core/app/gui/: CMakeLists.txt  GuiContext.hpp  Handler.cpp  Handler.hpp  TGui.cpp  TGui.hpp
core/app/gui/components/: CMakeLists.txt  CameraPanel.cpp  CameraPanel.hpp  CameraProperties.cpp  CameraProperties.hpp  Form.cpp  Form.hpp  LeftPanel.cpp  LeftPanel.hpp  MainPanel.cpp  MainPanel.hpp  MenuBar.cpp  MenuBar.hpp  ObjectProperties.cpp  ObjectProperties.hpp  RenderingSettings.cpp  RenderingSettings.hpp  RightPanel.cpp  RightPanel.hpp  StatusBar.cpp  StatusBar.hpp
core/app/gui/widgets/: CMakeLists.txt  RenderFrame.cpp  RenderFrame.hpp
core/config/: CMakeLists.txt  Config.cpp  Config.hpp  ConfigException.cpp  ConfigException.hpp  ConfigValidator.cpp  ConfigValidator.hpp
core/factory/: CMakeLists.txt  ObjectFactory.cpp  ObjectFactory.hpp
core/plugins/: CMakeLists.txt  PluginsManager.cpp  PluginsManager.hpp
core/types/: CMakeLists.txt
core/types/graphics/: Image.cpp  Image.hpp  PixelArray.cpp  PixelArray.hpp
core/types/rendering/: Camera.cpp  Camera.hpp  Scene.cpp  Scene.hpp  Screen.cpp  Screen.hpp
docs/: configuration.md  object-plugins.md  plugins.md  user-guide.md
libs/: CMakeLists.txt
objects/: CMakeLists.txt
objects/cube/: CMakeLists.txt  export.cpp
objects/cube/src/: Cube.cpp  Cube.hpp  CubeProvider.cpp  CubeProvider.hpp
objects/mesh/: CMakeLists.txt  export.cpp
objects/mesh/src/: Mesh.cpp  Mesh.hpp  MeshProvider.cpp  MeshProvider.hpp
objects/mesh/src/faces/: Compute.cpp  Compute.hpp  QuadFace.cpp  QuadFace.hpp  TriFace.cpp  TriFace.hpp
objects/mesh/src/interfaces/: IFace.hpp
objects/plain/: CMakeLists.txt  export.cpp
objects/plain/src/: Plain.cpp  Plain.hpp  PlainProvider.cpp  PlainProvider.hpp
objects/plane/: CMakeLists.txt  export.cpp
objects/plane/src/: Plane.cpp  Plane.hpp  PlaneProvider.cpp  PlaneProvider.hpp
objects/sphere/: CMakeLists.txt  export.cpp
objects/sphere/src/: Sphere.cpp  Sphere.hpp  SphereProvider.cpp  SphereProvider.hpp
plugins/: raytracer_sphere.dylib
resources/: theme.txt
scenes/: cube.cfg  mirrors.cfg  render_obj.cfg  sample.cfg  sphere.cfg  test.cfg  test2.cfg
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+67 more)
src/: CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  Config.cpp  Config.hpp
src/interfaces/: CMakeLists.txt  IObject.hpp
src/interfaces/graphics/: IObject.hpp
src/types/: CMakeLists.txt
src/types/graphics/: Color.cpp  Color.hpp  Hit.cpp  Hit.hpp  Material.cpp  Material.hpp  Pixel.hpp  Ray.cpp  Ray.hpp  Screen.hpp
src/types/math/: Float.cpp  Float.hpp  HitInfo.cpp  HitInfo.hpp  Point.cpp  Point.hpp  Ray.cpp  Ray.hpp  Vector.cpp  Vector.hpp
src/types/rendering/: Camera.cpp  Camera.hpp  Screen.cpp  Screen.hpp
tests/unit/: CMakeLists.txt  main.cpp  sample.cpp
tests/unit/common/: CMakeLists.txt
tests/unit/common/graphics/: CMakeLists.txt  ColorTests.cpp  MaterialTests.cpp
tests/unit/common/math/: CMakeLists.txt  HitInfoTests.cpp  PointTests.cpp  RayTests.cpp  VectorTests.cpp
tests/unit/core/: CMakeLists.txt
tests/unit/core/app/: AppTests.cpp  CMakeLists.txt
tests/unit/core/config/: CMakeLists.txt  ConfigTests.cpp  ConfigValidatorTests.cpp  invalid_file.cfg
tests/unit/core/factory/: CMakeLists.txt  ObjectFactoryTests.cpp
tests/unit/core/plugins/: CMakeLists.txt  PluginsManagerTests.cpp
tests/unit/core/types/: CMakeLists.txt
tests/unit/core/types/graphics/: CMakeLists.txt  ImageTests.cpp
tests/unit/core/types/rendering/: CMakeLists.txt  CameraTests.cpp  SceneTests.cpp  ScreenTests.cpp
tests/unit/types/: CMakeLists.txt
tests/unit/types/graphics/: CMakeLists.txt  ColorTests.cpp  MaterialTests.cpp  ScreenTests.cpp
tests/unit/types/math/: CMakeLists.txt  HitInfoTests.cpp  PointTests.cpp  RayTests.cpp  VectorTests.cpp
tests/unit/types/rendering/: ScreenTests.cpp
(+20 files in other folders)
